--- a/css/postmates.css
+++ b/css/postmates.css
@@ -86,10 +86,10 @@ TEAL #00CC99
 	-ms-user-select: none;
 	user-select: none;
 	border: .08333rem solid transparent;
-	padding: .75rem;
+	padding: .75rem 2rem;
 	font-size: 1.1rem;
 	line-height: 1.5;
-	border-radius: .5rem;
+	border-radius: 28px;
 }
 .teal-button:hover {
 	color: #fff;
